--- a/css/animations-io.css
+++ b/css/animations-io.css
@@ -1,4 +1,4 @@
-/* ---------- アニメーション ---------- */
+/* ---------- アニメーション（IOあり） ---------- */
 /* フェードイン */
 .fadein {
   opacity: 0;
@@ -18,4 +18,19 @@
 .expand.show {
   transform: scale(1); /* 2倍のサイズに拡大 */
 }
-/* ---------- アニメーション END ---------- */
+
+/* スライドイン（左から） */
+.slidein-l {
+  overflow: hidden;
+}
+
+.slidein-l * {
+  transform: translateX(-100%);
+  transition: transform 0.8s ease-out;
+}
+
+.slidein-l.show * {
+  transform: translateX(0);
+}
+
+/* ---------- アニメーション（IOあり） END ---------- */
