スライダー作った

--- a/components/slider-loop/index.html
+++ b/components/slider-loop/index.html
@@ -12,13 +12,15 @@
 
     <div class="slider">
         <div class="slider-track">
-            <img src="https://github.com/YOBOdesu/components-library/blob/main/assets/sample-01.jpg?raw=true" alt="1">
-            <img src="https://github.com/YOBOdesu/components-library/blob/main/assets/sample-01.jpg" alt="2">
-            <img src="https://github.com/YOBOdesu/components-library/blob/main/assets/sample-01.jpg" alt="3">
-            <img src="https://github.com/YOBOdesu/components-library/blob/main/assets/sample-01.jpg" alt="4">
+            <img src="../../assets/sample-01.jpg" alt="1">
+            <img src="../../assets/sample-01.jpg" alt="2">
+            <img src="../../assets/sample-01.jpg" alt="3">
+            <img src="../../assets/sample-01.jpg" alt="4">
             <!-- ダミーで繰り返し -->
-            <img src="https://github.com/YOBOdesu/components-library/blob/main/assets/sample-01.jpg" alt="1">
-            <img src="https://github.com/YOBOdesu/components-library/blob/main/assets/sample-01.jpg" alt="2">
+            <img src="../../assets/sample-01.jpg" alt="1">
+            <img src="../../assets/sample-01.jpg" alt="2">
+            <img src="../../assets/sample-01.jpg" alt="3">
+            <img src="../../assets/sample-01.jpg" alt="4">
         </div>
     </div>
 
