--- a/components/slider-loop/index.html
+++ b/components/slider-loop/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <div class="slider">
-        <div class="slider-track">
+    <div class="slider-loop">
+        <div class="slider-loop-track">
             <img src="../../assets/sample-01.jpg" alt="1">
             <img src="../../assets/sample-01.jpg" alt="2">
             <img src="../../assets/sample-01.jpg" alt="3">
