マーキーに変更

--- a/components/marquee/index.html
+++ b/components/marquee/index.html
@@ -3,15 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CSS無限ループ風スライダー</title>
-    <link rel="stylesheet" href="slider-loop.css">
+    <title>マーキー</title>
+    <link rel="stylesheet" href="marquee.css">
     <link rel="stylesheet" href="../shared/base.css">
 </head>
 
 <body>
+    <!-- ---------- マーキー ---------- -->
+    <div class="marquee-wrap">
+        <div class="marquee">
+            流れるテキストをここに入力してください。流れるテキストをここに入力してください。
+        </div>
+    </div>
+    <!-- ---------- /マーキー ---------- -->
 
-    <div class="slider-loop">
-        <div class="slider-loop-track">
+    <!-- マーキー（画像版） -->
+    <div class="marquee-wrap-img">
+        <div class="marquee-track">
             <img src="../../assets/sample-01.jpg" alt="1">
             <img src="../../assets/sample-01.jpg" alt="2">
             <img src="../../assets/sample-01.jpg" alt="3">
@@ -23,7 +31,7 @@
             <img src="../../assets/sample-01.jpg" alt="4">
         </div>
     </div>
-
+    <!-- マーキー（画像版） END -->
 </body>
 
 </html>
