--- a/components/marquee/marquee.css
+++ b/components/marquee/marquee.css
@@ -1,5 +1,28 @@
-/* スライダー全体 */
-.slider-loop {
+/* ---------- マーキー ---------- */
+.marquee-wrap {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.marquee {
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 15s linear infinite;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+/* ---------- マーキー END ---------- */
+
+/* ---------- マーキー（画像版） ---------- */
+.marquee-wrap-img {
   overflow: hidden;
   width: 100%; /* サイズ（変更可） */
 }
