--- a/components/marquee/index.html
+++ b/components/marquee/index.html
@@ -12,12 +12,13 @@
     <!-- ---------- マーキー ---------- -->
     <div class="marquee-wrap">
         <div class="marquee">
-            流れるテキストをここに入力してください。流れるテキストをここに入力してください。
+            <span>流れるテキストをここに入力してください。</span>
+            <span>流れるテキストをここに入力してください。</span>
         </div>
     </div>
     <!-- ---------- /マーキー ---------- -->
 
-    <!-- マーキー（画像版） -->
+    <!-- ---------- マーキー（画像版） ---------- -->
     <div class="marquee-wrap-img">
         <div class="marquee-track">
             <img src="../../assets/sample-01.jpg" alt="1">
@@ -31,7 +32,7 @@
             <img src="../../assets/sample-01.jpg" alt="4">
         </div>
     </div>
-    <!-- マーキー（画像版） END -->
+    <!-- ---------- /マーキー（画像版） ---------- -->
 </body>
 
 </html>
