--- a/components/card-01/index.html
+++ b/components/card-01/index.html
@@ -18,6 +18,7 @@
             </div>
             <div class="card-01__content">
                 <h3>タイトル</h3>
+                <div class="line-01"></div>
                 <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             </div>
             <div class="circle-zoom-btn">
@@ -32,7 +33,8 @@
             </div>
             <div class="card-01__content">
                 <h3>タイトル</h3>
-                <p>ここに説明が入ります。</p>
+                <div class="line-01"></div>
+                <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             </div>
             <div class="circle-zoom-btn">
                 <div class="circle-zoom-btn__bg"></div>
@@ -46,6 +48,7 @@
             </div>
             <div class="card-01__content">
                 <h3>タイトル</h3>
+                <div class="line-01"></div>
                 <p>ここに説明が入ります。</p>
             </div>
             <div class="circle-zoom-btn">
