--- a/components/card-01/card-01.css
+++ b/components/card-01/card-01.css
@@ -1,6 +1,7 @@
+/* ---------- カード01 ---------- */
 .card-01-wrap {
   display: flex;
-  gap: 20px;
+  gap: 1rem;
   flex-wrap: wrap;
 }
 
@@ -8,12 +9,26 @@
   color: #fff;
   border-radius: 8px;
   overflow: hidden;
-  padding: 20px;
+  padding: 2rem;
   position: relative;
   transition: 0.3s ease;
   flex: 1 1 calc(33.333% - 20px);
   max-width: calc(33.333% - 20px);
   box-sizing: border-box;
+}
+
+.card-01 .line-01 {
+  width: 20%;
+  background-color: #fff;
+}
+
+.card-01 h3 {
+  margin: 1rem 0 0 0;
+  font-size: 3rem;
+  font-weight: bold;
+}
+.card-01 p {
+  margin: 0;
 }
 
 .card-01--a {
@@ -29,3 +44,9 @@
 .card-01__image img {
   border-radius: 8px;
 }
+
+/* ホバーの挙動 */
+.card-01:hover .circle-zoom-btn__bg {
+  transform: scale(1.3);
+}
+/* ---------- /カード01 ---------- */
