スタイルシートのファイル名変更

--- a/components/card-01/index.html
+++ b/components/card-01/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>カード-01</title>
-    <link rel="stylesheet" href="card-01.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../shared/base.css">
     <link rel="stylesheet" href="../../shared\components.css">
 </head>
