--- a/components/marquee/index.html
+++ b/components/marquee/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>マーキー</title>
-    <link rel="stylesheet" href="marquee.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../shared/base.css">
 </head>
 
@@ -22,14 +22,12 @@
     <div class="marquee-wrap-img">
         <div class="marquee-track">
             <img src="../../assets/sample-01.jpg" alt="1">
-            <img src="../../assets/sample-01.jpg" alt="2">
-            <img src="../../assets/sample-01.jpg" alt="3">
-            <img src="../../assets/sample-01.jpg" alt="4">
+            <img src="../../assets/sample-02.jpg" alt="2">
+            <img src="../../assets/sample-03.jpg" alt="3">
             <!-- ダミーで繰り返し -->
             <img src="../../assets/sample-01.jpg" alt="1">
-            <img src="../../assets/sample-01.jpg" alt="2">
-            <img src="../../assets/sample-01.jpg" alt="3">
-            <img src="../../assets/sample-01.jpg" alt="4">
+            <img src="../../assets/sample-02.jpg" alt="2">
+            <img src="../../assets/sample-03.jpg" alt="3">
         </div>
     </div>
     <!-- ---------- /マーキー（画像版） ---------- -->
