--- a/components/slider-fade/index.html
+++ b/components/slider-fade/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="slider-fade.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="../shared/base.css">
 
 <!-- ---------- フェードスライダー ---------- -->
