--- a/components/slider-fade/style.css
+++ b/components/slider-fade/style.css
@@ -12,7 +12,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* 画像が枠に収まるように調整 */
+  object-fit: cover;
   opacity: 0;
   animation: fade 12s infinite; /* 画像枚数 × 4秒 */
 }
