アイコン関連

--- a/shared/components.css
+++ b/shared/components.css
@@ -41,3 +41,10 @@
 }
 */
 /* ---------- /〇→ボタン ---------- */
+
+.icon-check {
+  width: 48px; /* （背景を含めた）アイコンの幅 */
+  height: 48px; /* （背景を含めた）アイコンの高さ */
+  padding: 8px; /* アイコンと背景の間隔 */
+  color: #00796b; /* アイコン線の色 */
+}
