カード01完了

--- a/components/card-01/index.html
+++ b/components/card-01/index.html
@@ -3,22 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>カード-01</title>
+    <title>カード-01（親しみ）</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../shared/base.css">
-    <link rel="stylesheet" href="../../shared\components.css">
+    <link rel="stylesheet" href="../../shared/components.css">
     <svg style="display: none;">
-        <!-- 右向き矢印アイコン -->
+        <!-- 右向き矢印アイコン（SVGスプライト定義） -->
         <symbol id="icon-arrow" viewBox="0 0 24 24">
-            <polyline points="8 4 16 12 8 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+            <polyline points="8 4 16 12 8 20" fill="none" stroke="currentColor" stroke-width="5" stroke-linecap="round"
                 stroke-linejoin="round" />
         </symbol>
+        <!-- /右向き矢印アイコン（SVGスプライト定義） -->
     </svg>
 </head>
 
 <body>
     <h1>カード-01</h1>
     <div class="card-01-wrap">
+        <!-- カードa -->
         <a href="https://morld.co.jp/" class="card-01 card-01--a">
             <div class="card-01__image">
                 <img src="../../assets/sample-01.jpg" alt="">
@@ -27,48 +29,53 @@
                 <h3>タイトル</h3>
                 <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             </div>
-            <div class="circle-btn">
-                <div class="circle-btn__bg"></div>
+            <div class="icon-btn">
+                <div class="icon-btn__bg"></div>
                 <!-- 右向き矢印アイコン -->
                 <svg class="icon-arrow">
                     <use xlink:href="#icon-arrow"></use>
                 </svg>
             </div>
         </a>
+        <!-- /カードa -->
 
+        <!-- カードb -->
         <a href="https://morld.co.jp/" class="card-01 card-01--b">
             <div class="card-01__image">
-                <img src="../../assets/sample-01.jpg" alt="">
+                <img src="../../assets/sample-02.jpg" alt="">
             </div>
             <div class="card-01__content">
                 <h3>タイトル</h3>
                 <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             </div>
-            <div class="circle-btn">
-                <div class="circle-btn__bg"></div>
+            <div class="icon-btn">
+                <div class="icon-btn__bg"></div>
                 <!-- 右向き矢印アイコン -->
                 <svg class="icon-arrow">
                     <use xlink:href="#icon-arrow"></use>
                 </svg>
             </div>
         </a>
+        <!-- /カードb -->
 
+        <!-- カードc -->
         <a href="https://morld.co.jp/" class="card-01 card-01--c">
             <div class="card-01__image">
-                <img src="../../assets/sample-01.jpg" alt="">
+                <img src="../../assets/sample-03.jpg" alt="">
             </div>
             <div class="card-01__content">
                 <h3>タイトル</h3>
                 <p>ここに説明が入ります。</p>
             </div>
-            <div class="circle-btn">
-                <div class="circle-btn__bg"></div>
+            <div class="icon-btn">
+                <div class="icon-btn__bg"></div>
                 <!-- 右向き矢印アイコン -->
                 <svg class="icon-arrow">
                     <use xlink:href="#icon-arrow"></use>
                 </svg>
             </div>
         </a>
+        <!-- /カードc -->
     </div>
 
 </body>
