--- a/components/card-01/style.css
+++ b/components/card-01/style.css
@@ -1,52 +1,84 @@
 /* ---------- カード01 ---------- */
+/* カード全体のスタイル */
 .card-01-wrap {
   display: flex;
-  gap: 1rem;
+  gap: 1rem; /* カードの間隔 */
 }
 
+/* カード本体のスタイル */
 .card-01 {
-  color: #fff;
-  border-radius: 8px;
+  color: #fff; /* 文字色 */
+  border-radius: 8px; /* 角丸 */
   overflow: hidden;
-  padding: 2rem;
-  position: relative;
-  transition: 0.3s ease;
+  padding: 2rem; /* 内側の余白 */
   flex: 1;
   display: flex;
   flex-direction: column;
+  line-height: 1.7; /* 行間 */
 }
 
+/* カードa */
 .card-01--a {
   background-color: #f8a13d;
 }
+
+/* カードb */
 .card-01--b {
   background-color: #e0b800;
 }
+
+/* カードc */
 .card-01--c {
   background-color: #d4a017;
 }
 
-.card-01 .line-01 {
-  width: 20%;
-  background-color: #fff;
+/* カード内全要素のマージンリセット */
+.card-01 * {
+  margin: 0;
 }
 
+/* カードタイトルのスタイル */
 .card-01 h3 {
-  font-size: 3rem;
-  font-weight: bold;
+  font-size: 3rem; /* フォントサイズ */
+  font-weight: bold; /* フォントの太さ */
 }
 
+/* カード内画像ラッパー */
+.card-01__image {
+  overflow: hidden;
+  aspect-ratio: 4 / 3 /* アスペクト比を指定 */;
+  border-radius: 8px; /* 画像の角丸 */
+}
+
+/* カード内画像本体 */
 .card-01__image img {
-  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.9s ease; /* アニメーション用 */
 }
 
-.circle-btn {
+/* カード内ボタンの配置 */
+.icon-btn {
   align-self: flex-end; /* 一番左に設置 */
   margin-top: auto; /* 一番下に設置 */
 }
 
+/* カード内ボタンの背景 */
+.icon-btn__bg {
+  transition: 0.3s ease; /* アニメーション用 */
+}
+
 /* ホバーの挙動 */
-.card-01:hover .circle-btn__bg {
-  transform: scale(1.3);
+.card-01:hover .card-01__image img,
+.card-01:hover .icon-btn__bg {
+  transform: scale(1.3); /* 拡大率 */
 }
 /* ---------- /カード01 ---------- */
+
+@media screen and (max-width: 767px) {
+  /* スマホ用のスタイル */
+  .card-01-wrap {
+    flex-direction: column; /* 縦並びに変更 */
+  }
+}
