--- a/components/slider-fade/index.html
+++ b/components/slider-fade/index.html
@@ -4,11 +4,8 @@
 <!-- ---------- フェードスライダー ---------- -->
 <div class="slider-fade">
   <!-- ▼ ここに表示したい画像を追加または差し替え -->
-  <img src="https://raw.githubusercontent.com/YOBOdesu/components-library/refs/heads/main/assets/sample-01.jpg"
-    class="slide-item" />
-  <img src="https://raw.githubusercontent.com/YOBOdesu/components-library/refs/heads/main/assets/sample-02.jpg"
-    class="slide-item" />
-  <img src="https://raw.githubusercontent.com/YOBOdesu/components-library/refs/heads/main/assets/sample-03.jpg"
-    class="slide-item" />
+  <img src="../../assets/sample-01.jpg" class="slide-item" />
+  <img src="../../assets/sample-02.jpg" class="slide-item" />
+  <img src="../../assets/sample-03.jpg" class="slide-item" />
 </div>
 <!-- ---------- /フェードスライダー ---------- -->
