--- a/components/service-01/index.html
+++ b/components/service-01/index.html
@@ -30,7 +30,10 @@
         </div>
         <!-- ---------- /フェードスライダー ---------- -->
         <div class="service-01__content">
-            <h3>タイトル</h3>
+            <div class="section-header">
+                <p>業務案内</p>
+                <h3>SERVICE</h3>
+            </div>
             <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             <div class="icon-btn">
                 <div class="icon-btn__bg"></div>
