--- a/components/card-01/index.html
+++ b/components/card-01/index.html
@@ -26,7 +26,7 @@
                 <img src="../../assets/sample-01.jpg" alt="">
             </div>
             <div class="card-01__content">
-                <h3>タイトル</h3>
+                <h3>ここにタイトルが入ります。</h3>
                 <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             </div>
             <div class="icon-btn">
@@ -45,7 +45,7 @@
                 <img src="../../assets/sample-02.jpg" alt="">
             </div>
             <div class="card-01__content">
-                <h3>タイトル</h3>
+                <h3>ここにタイトルが入ります。</h3>
                 <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             </div>
             <div class="icon-btn">
@@ -64,7 +64,7 @@
                 <img src="../../assets/sample-03.jpg" alt="">
             </div>
             <div class="card-01__content">
-                <h3>タイトル</h3>
+                <h3>ここにタイトルが入ります。</h3>
                 <p>ここに説明が入ります。</p>
             </div>
             <div class="icon-btn">
