見出し追加

--- a/components/service-01/index.html
+++ b/components/service-01/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>ビジネス-01</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../slider-fade/style.css">
     <link rel="stylesheet" href="../../shared/base.css">
     <link rel="stylesheet" href="../../shared/components.css">
     <svg style="display: none;">
@@ -30,7 +29,7 @@
         </div>
         <!-- ---------- /フェードスライダー ---------- -->
         <div class="service-01__content">
-            <div class="section-header">
+            <div class="heading-01">
                 <p>業務案内</p>
                 <h3>SERVICE</h3>
             </div>
