いろいろ変更

--- a/components/card-01/index.html
+++ b/components/card-01/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>カード-01（親しみ）</title>
+    <title>カード-01</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../shared/base.css">
     <link rel="stylesheet" href="../../shared/components.css">
     <svg style="display: none;">
         <!-- 右向き矢印アイコン（SVGスプライト定義） -->
         <symbol id="icon-arrow" viewBox="0 0 24 24">
-            <polyline points="8 4 16 12 8 20" fill="none" stroke="currentColor" stroke-width="5" stroke-linecap="round"
+            <polyline points="8 4 16 12 8 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                 stroke-linejoin="round" />
         </symbol>
         <!-- /右向き矢印アイコン（SVGスプライト定義） -->
@@ -21,14 +21,15 @@
     <h1>カード-01</h1>
     <div class="card-01-wrap">
         <!-- カードa -->
-        <a href="https://morld.co.jp/" class="card-01 card-01--a">
+        <a href="#" class="card-01 card-01--a">
             <div class="card-01__image">
                 <img src="../../assets/sample-01.jpg" alt="">
             </div>
-            <div class="card-01__content">
-                <h3>ここにタイトルが入ります。</h3>
-                <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
+            <div class="heading-01">
+                <p>POINT</p>
+                <h3>働きやすいポイント</h3>
             </div>
+            <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             <div class="icon-btn">
                 <div class="icon-btn__bg"></div>
                 <!-- 右向き矢印アイコン -->
@@ -40,14 +41,15 @@
         <!-- /カードa -->
 
         <!-- カードb -->
-        <a href="https://morld.co.jp/" class="card-01 card-01--b">
+        <a href="#" class="card-01 card-01--b">
             <div class="card-01__image">
                 <img src="../../assets/sample-02.jpg" alt="">
             </div>
-            <div class="card-01__content">
-                <h3>ここにタイトルが入ります。</h3>
-                <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
+            <div class="heading-01">
+                <p>DATA</p>
+                <h3>データで分かる会社</h3>
             </div>
+            <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             <div class="icon-btn">
                 <div class="icon-btn__bg"></div>
                 <!-- 右向き矢印アイコン -->
@@ -59,14 +61,15 @@
         <!-- /カードb -->
 
         <!-- カードc -->
-        <a href="https://morld.co.jp/" class="card-01 card-01--c">
+        <a href="#" class="card-01 card-01--c">
             <div class="card-01__image">
                 <img src="../../assets/sample-03.jpg" alt="">
             </div>
-            <div class="card-01__content">
-                <h3>ここにタイトルが入ります。</h3>
-                <p>ここに説明が入ります。</p>
+            <div class="heading-01">
+                <p>CAREERS</p>
+                <h3>募集要項</h3>
             </div>
+            <p>ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。ここに説明が入ります。</p>
             <div class="icon-btn">
                 <div class="icon-btn__bg"></div>
                 <!-- 右向き矢印アイコン -->
