--- a/shared/base.css
+++ b/shared/base.css
@@ -7,7 +7,7 @@
 /* リンクの装飾を削除 */
 a {
   text-decoration: none;
-  /*color: inherit;*/ /* 親要素の色を引き継ぐ */
+  color: inherit; /* 親要素の色を引き継ぐ */
 }
 
 /* 画像 */
