--- a/shared/components.css
+++ b/shared/components.css
@@ -24,9 +24,9 @@
 }
 
 /* シンプルな直線矢印アイコン */
-.icon--arrow-simple {
-  width: 24px; /* アイコンの幅 */
-  height: 24px; /* アイコンの高さ */
+.icon-arrow-simple {
+  width: 1rem; /* アイコンの幅 */
+  height: 1rem; /* アイコンの高さ */
   /*color: #222;  アイコン線の色 */
   position: relative; /* 背景がある場合、前面に設置（背景無しなら不要） */
 }
