--- a/shared/components.css
+++ b/shared/components.css
@@ -9,26 +9,23 @@
 /* ---------- SVGアイコン ---------- */
 /* チェックマークアイコン */
 .icon-check {
-  width: 24px; /* アイコンの幅 */
-  height: 24px; /* アイコンの高さ */
-  /*color: #222;  アイコン線の色 */
-  position: relative; /* 背景がある場合、前面に設置（背景無しなら不要） */
+  width: 1rem; /* アイコンの幅 */
+  height: 1rem; /* アイコンの高さ */
+  color: #222; /*アイコン線の色 */
 }
 
 /* 右向き矢印アイコン */
 .icon-arrow {
-  width: 24px; /* アイコンの幅 */
-  height: 24px; /* アイコンの高さ */
-  /*color: #222;  アイコン線の色 */
-  position: relative; /* 背景がある場合、前面に設置（背景無しなら不要） */
+  width: 1rem; /* アイコンの幅 */
+  height: 1rem; /* アイコンの高さ */
+  color: #222; /*アイコン線の色 */
 }
 
 /* シンプルな直線矢印アイコン */
 .icon-arrow-simple {
   width: 1rem; /* アイコンの幅 */
   height: 1rem; /* アイコンの高さ */
-  /*color: #222;  アイコン線の色 */
-  position: relative; /* 背景がある場合、前面に設置（背景無しなら不要） */
+  color: #222; /*アイコン線の色 */
 }
 /* ---------- /SVGアイコン ---------- */
 
