--- a/components/card-01/style.css
+++ b/components/card-01/style.css
@@ -62,27 +62,26 @@
   transition: transform 0.9s ease; /* アニメーション用 */
 }
 
-/* アイコンボタン */
-.icon-btn {
+/* 右向き矢印アイコン */
+.icon-arrow {
   align-self: flex-end; /* 一番左に設置 */
   margin-top: auto; /* 一番下に設置 */
-}
-
-/* チェックマークアイコン */
-.icon-arrow {
   color: #fff; /* アイコン線の色 */
-}
-
-/* アイコンボタンの背景 */
-.icon-btn__bg {
-  transition: 0.3s ease; /* アニメーション用 */
-  background-color: #222; /* 背景色 */
+  background-color: #222; /* アイコンの背景色 */
+  border-radius: 50%; /* アイコン背景を丸くする */
+  width: 3rem; /* アイコンのサイズ */
+  height: 3rem; /* アイコンのサイズ */
+  padding: 1rem; /* アイコンの内側余白 */
+  transition: all 0.3s ease; /* アイコンのホバーアニメーションの速度 */
 }
 
 /* ホバーの挙動 */
-.card-01:hover .card-01__image img,
-.card-01:hover .icon-btn__bg {
+.card-01:hover .card-01__image img {
   transform: scale(1.3); /* 拡大率 */
+}
+.card-01:hover .icon-arrow {
+  transform: scale(1.3); /* 拡大率 */
+  padding: 1.1rem; /* アイコンの内側余白 */
 }
 /* ---------- /カード01 ---------- */
 
