--- a/components/service-01/style.css
+++ b/components/service-01/style.css
@@ -51,8 +51,8 @@
 
 /* シンプルな直線矢印アイコン */
 .icon-arrow-simple {
-  color: #222; /* アイコン線の色 */
-  background-color: #fff; /* アイコンの背景色 */
+  color: #fff; /* アイコン線の色 */
+  background-color: #222; /* アイコンの背景色 */
   border: solid 1px #222; /* アイコン背景の線 */
   border-radius: 50%; /* アイコン背景を丸くする */
   width: 2rem; /* アイコンのサイズ */
@@ -62,8 +62,8 @@
 }
 
 .icon-link-list li a:hover .icon-arrow-simple {
-  color: #fff; /* アイコン線の色 */
-  background-color: #222; /* アイコンの背景色 */
+  color: #222; /* アイコン線の色 */
+  background-color: #fff; /* アイコンの背景色 */
 }
 /* ---------- /アイコンリンクリスト ---------- */
 
@@ -73,7 +73,6 @@
   position: relative;
   width: 100%; /* 横幅 */
   aspect-ratio: 4 / 3; /* 比率を変えたいときはここを調整 */
-  overflow: hidden;
   border-radius: 10px; /* 角丸 */
 }
 
@@ -83,7 +82,9 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 10px; /* 角丸 */
   opacity: 0;
+  transform: translateY(30px); /* 30px 下に隠す */
   animation: fade 12s infinite; /* 画像枚数 × 4秒 */
 }
 
@@ -107,18 +108,23 @@
 @keyframes fade {
   0% {
     opacity: 0;
+    transform: translateY(30px); /* 30px 下に隠す */
   }
   5% {
     opacity: 1;
+    transform: translateY(0); /* 元の位置に戻す */
   }
   30% {
     opacity: 1;
+    transform: translateY(0); /* 元の位置に戻す */
   }
   35% {
     opacity: 0;
+    transform: translateY(-30px); /* 30px 上に隠す */
   }
   100% {
     opacity: 0;
+    transform: translateY(-30px); /* 30px 上に隠す */
   }
 }
 /* ---------- /フェードスライダー ---------- */
